<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pages.calculator.CalculatorFragment">

    <LinearLayout
        android:id="@+id/calculator_fondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/signo_dinero"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="@id/lblCobro"
                app:layout_constraintEnd_toStartOf="@id/lblCobro" />

            <TextView
                android:id="@+id/lblCobro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cargando"
                android:textSize="85sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/lblTiempoEstadia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/cargando" />

        <RadioGroup
            android:id="@+id/rgTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginHorizontal="32dp">

            <RadioButton
                android:id="@+id/rbAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="22sp"
                android:text="@string/auto"/>

            <RadioButton
                android:id="@+id/rbCamioneta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="22sp"
                android:text="@string/camioneta" />

            <RadioButton
                android:id="@+id/rbMoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/moto_bici" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/ingreso"
            android:textSize="22sp" />

        <com.slavik.parking.util.TimeEditText
            android:id="@+id/txtIngreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxLength="5"
            android:minWidth="8dp"
            android:textAlignment="center"
            android:textSize="60sp"
            android:layout_marginBottom="120dp"/>
    </LinearLayout>
</ScrollView>